comment out broken stuff

--- a/static/uploads/loanpay/form.html
+++ b/static/uploads/loanpay/form.html
@@ -105,10 +105,10 @@
           return
         }
 
-        const go = new Go();
-        WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
-          go.run(result.instance);
-        });
+        // const go = new Go();
+        // WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
+        //   go.run(result.instance);
+        // });
 
         // var xhr = new XMLHttpRequest();
         // xhr.open("POST", 'http://google.com', true);
