--- a/static/uploads/loanpay/form.html
+++ b/static/uploads/loanpay/form.html
@@ -105,6 +105,10 @@
           return
         }
 
+        //Parse all loan inputs into json
+
+        //get output and spit out to screen
+
         // const go = new Go();
         // WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
         //   go.run(result.instance);
